# dji-dock3_guard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: alert_levels.yaml  dingtalk_robots.yaml.example  enums.yaml  hms_codes.yaml.example  mode_code_map.yaml  notification_routing.yaml.example  rules.yaml  runtime.yaml.example  webhooks.yaml.example
docs/superpowers/plans/: 2026-06-29-flight-speed-chart.md
docs/superpowers/specs/: 2026-06-29-flight-speed-chart-design.md
scripts/: gen_hms_codes.py  regen_replay_baseline.py
src/dock_guard/: __init__.py  __main__.py  config.py  types.py
src/dock_guard/aggregator/: __init__.py  dock_aggregator.py  facts.py  facts_ring.py  phase_machine.py  windows.py
src/dock_guard/analytics/: __init__.py  __main__.py  collector.py  models.py  report.py
src/dock_guard/analytics/analyzers/: __init__.py  battery.py  battery_anomaly.py  battery_buckets.py  battery_fit.py  battery_models.py  battery_report.py
src/dock_guard/analytics/serve/: __init__.py  __main__.py  app.py  scanner.py
src/dock_guard/analytics/serve/static/: app.js  detail.html  hms_codes.js  hms_codes_extra.js  index.html  safety.html
src/dock_guard/coordinator/: __init__.py  alert_record.py  cooldown.py  coordinator.py  dedup.py  mute.py
src/dock_guard/http/: __init__.py  admin.py  app.py  auth.py  events.py  health.py  server.py  state.py
src/dock_guard/ingest/: __init__.py  mqtt_source.py  replay_source.py  source.py
src/dock_guard/notify/: __init__.py  bus.py  channel.py  dingtalk.py  loader.py  notification.py  routing.py  webhook.py
src/dock_guard/rules/: __init__.py  custom_fns.py  engine.py  loader.py  verdict.py
tests/: conftest.py
tests/ci/: test_custom_fn_isolation.py  test_static_checks.py
tests/integration/: test_aggregator_replay.py  test_analytics_e2e.py  test_battery_analyzer_e2e.py  test_coordinator_replay.py  test_live_to_dingtalk.py  test_replay_source.py  test_rules_replay.py
tests/replay/: _helpers.py  test_replay_baseline.py
tests/replay/baselines/: 8UUXN7N00A0GAA_20260605-165145.json
tests/unit/: _serve_helpers.py  test_analytics_cli.py  test_analytics_collector.py  test_analytics_report.py  test_analyzer_battery_anomaly.py  test_analyzer_battery_buckets.py  test_analyzer_battery_cli.py  test_analyzer_battery_fit.py  test_analyzer_battery_report.py  test_bus.py  test_collector_battery_samples.py  test_collector_flight_drift.py  test_collector_flight_samples.py  test_collector_hms_events.py  test_collector_hsi_samples.py  test_collector_link_samples.py  test_collector_obstacle_avoidance.py  test_collector_stick_samples.py  test_collector_transfer_events.py  test_config.py  test_cooldown.py  test_coordinator.py  test_dedup.py  test_dingtalk.py  test_envelope.py  test_facts_ring.py  test_flight_sample_model.py  test_gen_hms_codes.py  test_hms_codes_extra.py  test_http_admin.py  test_http_auth.py  test_http_events.py  test_http_health.py  test_link_sample_model.py  test_main_http_resolve.py  test_mqtt_source.py  test_mute.py  test_phase_machine.py  test_report_battery_chart.py  test_report_speed_chart.py  (+13 more)
