[project]
name = "dock-guard"
version = "0.2.0"
description = "DJI Dock 3 飞行安全评估与告警系统（v2，纯告警，不下发任何指令）"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "dock-guard team" }]

dependencies = [
    "aiomqtt>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
analytics = [
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.8",
    "scipy>=1.13",
    "pyarrow>=16.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
dock-guard = "dock_guard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dock_guard"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -ra"
markers = [
    "replay: 依赖 sim_dji_cloud_service 录制目录 (见 tests/conftest.py)",
    "integration: 集成测试 (跨多模块)",
]
